--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   },
   "devDependencies": {
     "@types/analytics-node": "^0.0.30",
+    "@types/node": "^9.6.1",
+    "jest": "^22.4.3",
     "prettier": "^1.11.1",
+    "ts-jest": "^22.4.2",
     "tslint": "^5.9.1",
     "tslint-config-prettier": "^1.10.0",
     "typescript": "^2.8.1"
