--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "clean": "git clean -X -f  --exclude='!.envrc' --exclude='!.env'",
     "build": "tsc",
-    "test": "jest",
+    "test": "jest --verbose",
     "lint": "tslint -p ."
   },
   "dependencies": {
     "analytics-node": "^3.2.0",
-    "envvar": "^2.0.0"
+    "envvar": "^2.0.0",
+    "io-ts": "^1.0.5"
   },
   "devDependencies": {
     "@types/analytics-node": "^0.0.30",
