--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
+  "files.exclude": {
+    "**/.git": true,
+    "**/.svn": true,
+    "**/.hg": true,
+    "**/CVS": true,
+    "**/.DS_Store": true,
+    // Thank you! https://github.com/Microsoft/vscode/issues/869#issuecomment-256918658
+    "**/*.js": { "when": "$(basename).ts" }
+  },
   "editor.formatOnSave": true
 }
