--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,17 @@
 {
   "compilerOptions": {
-    "sourceMap": true,
     "target": "es2017",
     "module": "commonjs",
     "moduleResolution": "node",
-    "lib": [
-      "es2015",
-      "es2016",
-      "es2017"
-    ],
+    "lib": ["es2015", "es2016", "es2017"],
     "strict": true,
     "pretty": true,
     "allowSyntheticDefaultImports": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "outDir": "./build",
+    "sourceMap": true,
+    "declaration": true,
+    "outDir": "./build"
   },
-  "include": [
-    "./src"
-  ]
+  "include": ["./src"]
 }
