--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
     "**/CVS": true,
     "**/.DS_Store": true,
     // Thank you! https://github.com/Microsoft/vscode/issues/869#issuecomment-256918658
-    "**/*.js": { "when": "$(basename).ts" }
+    "**/*.js": { "when": "$(basename).ts" },
+    "**/*.js": { "when": "$(basename).tsx" }
   },
   "editor.formatOnSave": true
 }
