Upgrade to latest analytics-node that actually works in react-native with lots of hacks

--- a/examples/expo/tsconfig.json
+++ b/examples/expo/tsconfig.json
@@ -1,3 +1,7 @@
 {
-  "base": "../../tsconfig.json"
+  "base": "../../tsconfig.json",
+  "compilerOptions": {
+    "skipLibCheck": true,
+    "jsx": "react-native"
+  }
 }
