--- a/examples/expo/package.json
+++ b/examples/expo/package.json
@@ -6,10 +6,12 @@
   },
   "dependencies": {
     "analytics-next": "file:../../",
+    "assert": "^1.4.1",
+    "buffer": "^5.1.0",
     "expo": "^26.0.0",
     "react": "16.3.0-alpha.1",
-    "react-native":
-      "https://github.com/expo/react-native/archive/sdk-26.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-26.0.0.tar.gz",
+    "util": "^0.10.3"
   },
   "devDependencies": {
     "@types/react-native": "^0.52.22",
