--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "tslint -p ."
   },
   "dependencies": {
-    "analytics-node": "^3.2.0",
+    "analytics-node": "^3.3.0-beta.2",
     "envvar": "^2.0.0",
     "io-ts": "^1.0.5"
   },
