--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
   "name": "analytics-next",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "license": "UNLICENSED",
-  "main": "./build",
+  "main": "build/",
+  "typings": "build/index.d.ts",
   "scripts": {
     "clean": "git clean -X -f  --exclude='!.envrc' --exclude='!.env'",
     "build": "tsc",
     "test": "jest --verbose",
     "lint": "tslint -p ."
   },
-  "files": [
-    "build/"
-  ],
+  "files": ["build/"],
   "dependencies": {
     "analytics-node": "^3.3.0-beta.2",
     "es6-promisify": "^6.0.0",
