--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "analytics-next",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "license": "UNLICENSED",
   "main": "build/",
   "typings": "build/index.d.ts",
@@ -10,7 +10,9 @@
     "test": "jest --verbose",
     "lint": "tslint -p ."
   },
-  "files": ["build/"],
+  "files": [
+    "build/"
+  ],
   "dependencies": {
     "analytics-node": "^3.3.0-beta.2",
     "es6-promisify": "^6.0.0",
