--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "analytics-next",
   "version": "0.1.3",
-  "license": "UNLICENSED",
+  "license": "MIT",
+  "author": {
+    "name": "Tony Xiao",
+    "email": "tonyx.ca@gmail.com"
+  },
   "main": "build/",
   "typings": "build/index.d.ts",
   "scripts": {
@@ -10,9 +14,7 @@
     "test": "jest --verbose",
     "lint": "tslint -p ."
   },
-  "files": [
-    "build/"
-  ],
+  "files": ["build/", "src/"],
   "dependencies": {
     "analytics-node": "^3.3.0-beta.2",
     "es6-promisify": "^6.0.0",
@@ -32,12 +34,8 @@
     "ts-jest": "^22.4.2",
     "tslint": "^5.9.1",
     "tslint-config-prettier": "^1.10.0",
-    "typescript": "^2.8.1"
-  },
-  "optionalDependencies": {
+    "typescript": "^2.8.1",
     "assert": "^1.4.1",
-    "buffer": "^5.1.0",
-    "react-native": "^0.54.4",
-    "react-navigation": "^1.5.9"
+    "buffer": "^5.1.0"
   }
 }
