--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "analytics-next",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "license": "MIT",
   "author": {
     "name": "Tony Xiao",
@@ -14,7 +14,10 @@
     "test": "jest --verbose",
     "lint": "tslint -p ."
   },
-  "files": ["build/", "src/"],
+  "files": [
+    "build/",
+    "src/"
+  ],
   "dependencies": {
     "analytics-node": "^3.3.0-beta.2",
     "debug": "^3.1.0",
