--- a/package.json
+++ b/package.json
@@ -12,12 +12,10 @@
     "clean": "git clean -X -f  --exclude='!.envrc' --exclude='!.env'",
     "build": "tsc",
     "test": "jest --verbose",
-    "lint": "tslint -p ."
+    "lint": "tslint -p .",
+    "prepublish": "yarn build"
   },
-  "files": [
-    "build/",
-    "src/"
-  ],
+  "files": ["build/", "src/"],
   "dependencies": {
     "analytics-node": "^3.3.0-beta.2",
     "debug": "^3.1.0",
