--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "analytics-next",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "license": "MIT",
   "author": {
     "name": "Tony Xiao",
@@ -15,7 +15,10 @@
     "lint": "tslint -p .",
     "prepublish": "yarn build"
   },
-  "files": ["build/", "src/"],
+  "files": [
+    "build/",
+    "src/"
+  ],
   "dependencies": {
     "analytics-node": "^3.3.0-beta.2",
     "debug": "^3.1.0",
