[v0.3.0] Moving analytics-node to optionalPeerDependencies

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "analytics-next",
-  "version": "0.2.6",
+  "version": "0.3.0",
   "license": "MIT",
   "author": {
     "name": "Tony Xiao",
@@ -15,15 +15,14 @@
     "lint": "tslint -p .",
     "prepublish": "yarn build"
   },
-  "files": [
-    "build/",
-    "src/"
-  ],
-  "dependencies": {
+  "files": ["build/", "src/"],
+  "optionalPeerDependencies": {
     "analytics-node": "^3.3.0-beta.2",
-    "debug": "^3.1.0",
-    "io-ts": "^1.0.5",
     "util": "^0.10.3"
+  },
+  "dependencies": {
+    "debug": "^3.1.0",
+    "io-ts": "^1.0.5"
   },
   "devDependencies": {
     "@types/analytics-node": "^0.0.30",
