--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,10 @@ jobs:
 
       - run:
           name: Install dependencies # and ensure yarn.locks are up to date
-          command: yarn install # && git diff --exit-code
+          command: |
+            yarn install # && git diff --exit-code
+            # Hack to manually install optionalPeerDependencies
+            yarn add analytics-node util
 
       - save_cache:
           paths:
