--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "lint": "tslint -p .",
     "prepublish": "yarn build"
   },
-  "files": ["build/", "src/"],
+  "files": [
+    "build/",
+    "src/"
+  ],
   "optionalPeerDependencies": {
     "analytics-node": "^3.3.0-beta.2",
     "util": "^0.10.3"
@@ -31,6 +34,7 @@
     "@types/es6-promisify": "^6.0.0",
     "@types/jest": "^24.0.11",
     "@types/node": "^11.13.0",
+    "analytics-node": "^3.3.0",
     "assert": "^1.4.1",
     "buffer": "^5.2.1",
     "codecov": "^3.3.0",
@@ -42,6 +46,7 @@
     "ts-jest": "^24.0.1",
     "tslint": "^5.15.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.4.1"
+    "typescript": "^3.4.1",
+    "util": "^0.11.1"
   }
 }
