Update more jest config

--- a/package.json
+++ b/package.json
@@ -16,10 +16,7 @@
     "lint": "tslint -p .",
     "prepublish": "yarn build"
   },
-  "files": [
-    "build/",
-    "src/"
-  ],
+  "files": ["build/", "src/"],
   "optionalPeerDependencies": {
     "analytics-node": "^3.3.0-beta.2",
     "util": "^0.10.3"
