--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,3 @@
 {
-  "extends": ["config:base", ":preserveSemverRanges"],
-  "groupName": "all"
+  "extends": ["config:base", ":preserveSemverRanges", "group:all"]
 }
